Comments for PROMPTING.

--- a/bash.1
+++ b/bash.1
@@ -8379,19 +8379,19 @@ ASCII のエスケープ文字 (033)
 .TP
 .B \et
 .\"O the current time in 24-hour HH:MM:SS format
-24 時間の HH:MM:SS 形式の現在の時刻
+24 時間制の HH:MM:SS 形式の現在の時刻
 .TP
 .B \eT
 .\"O the current time in 12-hour HH:MM:SS format
-12 時間の HH:MM:SS 形式の現在の時刻
+12 時間制の HH:MM:SS 形式の現在の時刻
 .TP
 .B \e@
 .\"O the current time in 12-hour am/pm format
-12 時間の am/pm 形式の現在の時刻
+12 時間制の am/pm 形式の現在の時刻
 .TP
 .B \eA
 .\"O the current time in 24-hour HH:MM format
-12 時間の HH:MM 形式の現在の時刻
+12 時間制の HH:MM 形式の現在の時刻
 .TP
 .B \eu
 .\"O the username of the current user
@@ -8489,12 +8489,12 @@ ASCII のエスケープ文字 (033)
 .\"O below).
 コマンド番号と履歴番号は異なるのが普通です:
 コマンドの履歴番号とは履歴リスト内での位置です。
-履歴リストは履歴ファイルから読み込めます。
+履歴リストは履歴ファイルから読み込めます
 (後述の
 .SM
 .B 履歴
-を参照)
-一方コマンド番号は、
+を参照)。
+一方、コマンド番号は、
 現在のシェルのセッション中に実行された一連のコマンドの列における位置です。
 この文字列がデコードされた後、さらにパラメータ展開、コマンド置換、
 算術式展開、クォート削除が適用されます。展開はシェルオプション
