--- a/bash.1
+++ b/bash.1
@@ -11716,8 +11716,8 @@ complete -D -F _completion_loader
 .\"O e.g., '"\eC\-x\eC\-r": re\-read\-init\-file'.
 .\"O Options, if supplied, have the following meanings:
 .\"O motoki: 少し意訳しすぎか。
-.\"O motoki: binging or command の command に対応する訳がない。
-.\"O motoki: bing の書式では keyseq:function-name のように続いているが
+.\"O motoki: binding or command の command に対応する訳がない。
+.\"O motoki: bind の書式では keyseq:function-name のように続いているが
 .\"O motoki: 本当は keyseq: function-name にしないといけないのかな？
 受け付ける割り当ての記法は
 .I .inputrc
