--- a/bash.1
+++ b/bash.1
@@ -11719,6 +11719,9 @@ complete -D -F _completion_loader
 .\"O motoki: binding or command の command に対応する訳がない。
 .\"O motoki: bind の書式では keyseq:function-name のように続いているが
 .\"O motoki: 本当は keyseq: function-name にしないといけないのかな？
+.\"O emasaka: ':' 直後の空白は無視され、有無のどちらでもよいようです。
+.\"O emasaka: 書式の記載は、空白なしにすることで 1 つの引き数であることを
+.\"O emasaka: 示しているのかと。
 受け付ける割り当ての記法は
 .I .inputrc
 と全く同じですが、
