--- a/bash.1
+++ b/bash.1
@@ -12139,9 +12139,9 @@ vi\-move, vi\-command\fP,
 .\"O with the same flags.
 .\"O If \fIword\fP is specified, only those completions matching \fIword\fP
 .\"O will be displayed.
-.\"O motoki: 少し訳を工夫した方がいいかも。completion specification が適切に訳せていないような気がする。
-マッチは、同じフラグで指定されたプログラム補完コードが
-直接補完を生成するのと同じ方法で生成されます。
+マッチのリストは、同じフラグによる補完仕様で
+プログラム補完のコードが直接生成したかのように
+生成されます。
 \fIword\fP が指定されると、\fIword\fP にマッチする補完だけが表示されます。
 .sp 1
 .\"O The return value is true unless an invalid option is supplied, or no
