answer to comment

--- a/bash.1
+++ b/bash.1
@@ -12492,6 +12492,8 @@ readline がファイル名特有の処理
 .\"O .B select
 .\"O loop.
 .\"O motoki: resume なので、「再開」の方がいいかな。
+.\"O emasaka: 「再開」だと「中断」した後でまた始める、というニュアンスで、
+.\"O emasaka: ちょっと違うかなと。
 .BR for ,
 .BR while ,
 .BR until ,
