commented out repeate original text

--- a/bash.1
+++ b/bash.1
@@ -12816,14 +12816,13 @@ trace 属性は変数には意味を持ちません。
 .\"O nor the
 .\"O .B \-r
 .\"O option is supplied, the \fIcurrent job\fP is used.
-.I jobspec
-がなく、かつ
-.B \-a
-オプションも
-.B \-r
-オプションも与えられていない場合には、\fIカレントジョブ\fPが使われます。
-\" emasaka: 上の文章は重複している。
-.\"O motoki: コメントアウトしてはいかがでしょうか。
+.\"O .I jobspec
+.\"O がなく、かつ
+.\"O .B \-a
+.\"O オプションも
+.\"O .B \-r
+.\"O オプションも与えられていない場合には、\fIカレントジョブ\fPが使われます。
+.\"O emasaka: 上の訳文は、同じ段落で重複しているためコメントアウト。
 .\"O If no
 .\"O .I jobspec
 .\"O is supplied, the
