--- a/bash.1
+++ b/bash.1
@@ -13231,7 +13231,7 @@ POSIX の\fI特殊\fP組み込みコマンドだけに制限されます。
 .I first
 と
 .I last
-には文字列か数値が指定します。
+には文字列か数値を指定します。
 文字列はその文字列で始まる最後のコマンドを表し、
 数値は履歴リスト中でのインデックスを表します
 (負の値は現在のコマンド番号からのオフセットとして扱われます)。
