--- a/bash.1
+++ b/bash.1
@@ -14545,9 +14545,9 @@ POSIX の\fI特殊\fP組み込みコマンドだけに制限されます。
 .\"O is unset before any new values are assigned.
 .\"O Other \fIname\fP arguments are ignored.
 .\"O motoki: before any ... の訳がない。
-.\"O motoki: unset は「変数を削除する」という意味なので、「設定を消す」というのは違うのではないか。
+新しい値が代入される前に
 .I aname
-の設定は消されます。他の
+は削除されます。他の
 \fIname\fP
 引き数は無視されます。
 .TP
