answer to comment

--- a/bash.1
+++ b/bash.1
@@ -14589,6 +14589,8 @@ readline は現在の (行編集がそれまで有効になっていなければ
 .\"O waiting for a complete line of input, but honor a delimiter if fewer
 .\"O than \fInchars\fP characters are read before the delimiter.
 .\"O motoki: ここだけ「組み込みコマンド」があるが、不要だと思います。
+.\"O emasaka: そうは思いますが、bash.1 全体で「組み込みコマンド」が付く
+.\"O emasaka: パターンが不明なので。
 組み込みコマンド \fBread\fP は、
 入力行全体が読み込まれるのを待たず、
 \fInchars\fP 文字を読み込んだ時点で戻ります。
