accepted and removed comment

--- a/bash.1
+++ b/bash.1
@@ -14745,9 +14745,8 @@ readline は現在の (行編集がそれまで有効になっていなければ
 .\"O is supplied with a
 .\"O .I name
 .\"O that is not a function.
-.\"O motoki: valid の訳は「有効な」なので、invalid は「無効な」の方が自然か。
 返却ステータスは基本的に 0 ですが、
-不正なオプションがあった場合、
+無効なオプションがあった場合、
 .I name
 のいずれかが有効なシェル変数名でなかった場合、
 .\"O motoki: name は -f オプションの引き数ではないので、-f が指定された場合に name が... の方がよい。
