answer to comment

--- a/bash.1
+++ b/bash.1
@@ -14917,6 +14917,8 @@ readline は現在の (行編集がそれまで有効になっていなければ
 .\"O Remember the location of commands as they are looked up for execution.
 .\"O This is enabled by default.
 .\"O motoki: 何ができるようになるのかは理解できず。
+.\"O emasaka: hash -r でクリアしたりするコマンドのハッシュテーブルの
+.\"O emasaka: 有効無効の設定ですね。
 実行時に参照できるようにコマンドの位置を記憶します。
 これはデフォルトで有効になっています。
 .TP 8
