--- a/bash.1
+++ b/bash.1
@@ -14930,8 +14930,10 @@ readline は現在の (行編集がそれまで有効になっていなければ
 .\"O すでにある場合は上書きすることになるはず。
 .\"O motoki: "for a command" ということは、ある一つのコマンドの実行環境だけが変更されるということか？
 .\"O motoki: 全体の書式が書かれていないので、詳しいことは分からないが。
-代入文の形式を持つ全ての引き数を、コマンドに対する環境に追加します。
-環境変数となるのは、コマンド名の前にあるものに限りません。
+.\"O emasaka: foo=xxx cmd と同じように cmd foo=xxx が使えるようになります。
+コマンド名の前にある代入文だけでなく、
+引数として指定された全て代入文も、
+そのコマンドに対する環境変数に追加されます。
 .TP 8
 .B \-m
 .\"O Monitor mode.  Job control is enabled.  This option is on
