--- a/bash.1
+++ b/bash.1
@@ -15628,11 +15628,10 @@ vi 形式のコマンド行編集インタフェースを使います。
 .\"O .B bash
 .\"O changes its behavior to that of version 3.1 with respect to quoted
 .\"O arguments to the \fB[[\fP conditional command's \fB=~\fP operator.
-.\"O motoki: version 3.1 の直前に bash を置いた方が読みやすい。
 設定されている場合、
 .B bash
 は、条件コマンド \fB[[\fP の \fB=~\fP 演算子のクォートされた引き数に関して
-version 3.1 の動作に変更します。
+bash version 3.1 の動作に変更します。
 .TP 8
 .B compat32
 .\"O If set,
