--- a/bash.1
+++ b/bash.1
@@ -16255,13 +16255,13 @@ GNU 標準のエラーメッセージの形式で出力されます。
 .\"O 3 arguments
 引き数が 3 個
 .\"O The following conditions are applied in the order listed.
+以下の順に条件が適用されます。
 .\"O If the second argument is one of the binary conditional operators listed above
 .\"O under
 .\"O .SM
 .\"O .BR "CONDITIONAL EXPRESSIONS" ,
 .\"O the result of the expression is the result of the binary test using
 .\"O the first and third arguments as operands.
-.\"O motoki: 最初の文 (The following ...) に対応する訳がない。
 2 番目の引き数が、既に
 .SM
 .BR 条件式
