--- a/bash.1
+++ b/bash.1
@@ -16701,7 +16701,7 @@ ASCII コードに基づき辞書順にソートします
 強い制限は一度設定すると、root 以外のユーザが増やすことはできません。
 弱い制限は強い制限の値までは増やせます。
 \fB\-H\fP と \fB\-S\fP がどちらも指定されていない場合、
-強い制限と弱い制限が両方が設定されます。
+強い制限と弱い制限が両方とも設定されます。
 .\"O The value of
 .\"O .I limit
 .\"O can be a number in the unit specified for the resource
