--- a/bash.1
+++ b/bash.1
@@ -7545,8 +7545,7 @@ POSIX に準拠する形で \fBtest\fP コマンドを使う場合には
 .IP \(bu
 .\"O shell variables and functions marked for export, along with variables
 .\"O exported for the command, passed in the environment
-.\"O motoki: shell variables and functions の functions の方がありません。
-エクスポートするシェル変数と、
+エクスポートするシェル変数や関数と、
 そのコマンドに対してエクスポートされた変数。
 これらは環境で渡されます。
 .IP \(bu
