modified from [JM:01083]
Old sentence looks as if `if' returns 0 even when `else' clause was
executed and returned non-0.

Thanks to Jiro Matsuzawa

--- a/bash.1
+++ b/bash.1
@@ -1590,8 +1590,9 @@ EOF を読み込むとコマンドが終了します。
 \fIlist\fP の終了ステータスが 0 ならば、対応する \fBthen\fP \fIlist\fP
 が実行され、コマンドが終了します。そうでなければ、\fBelse\fP \fIlist\fP
 が (もし存在すれば) 実行されます。
-終了ステータスは最後に実行されたコマンドの終了ステータスですが、
-真と評価された条件が全くない場合には 0 となります。
+ 終了ステータスは最後に実行されたコマンドの終了ステータスとなります。
+どの条件も真と評価されず、コマンドが全く実行されなかった場合、
+終了ステータスは 0 となります。
 .TP
 \fBwhile\fP \fIlist-1\fP; \fBdo\fP \fIlist-2\fP; \fBdone\fP
 .PD 0
